Added output files for tests.

--- a/test/104.EmptyLines/description
+++ b/test/104.EmptyLines/description
@@ -1,1 +1,1 @@
-Classic input with empty lines (should detect a single empty token)
+Classic input with empty lines (should be counted with no token).
