--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.data
 .DS_Store
 
+# Dependencies
+**/node_modules/
+
 # Object files
 obj/
 *.o
@@ -35,3 +38,6 @@ bin/
 
 # Debug files
 *.dSYM/
+
+# Corpus
+corpus/
